[package]
name = "baopo"
version = "0.1.0"
authors = ["刘荣飞 <i@c0de.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="*"
threadpool = "1.7.1"
structopt="*"
rand="*"
base64 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex="*"
log="*"
lazy_static = "1.4.0"
